[package]
name = "flash-client"
version = "0.1.2"
edition = "2024"

[dependencies]
reqwest = "0.12.22"
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
axum = {version = "0.8.4", features = ["multipart"] }
